BA-716 // Fix misaligned members in members lists that appear on Program and Project detail pages.
Removed extra css and markup that was not necessary and causing funkiness.

--- a/public/less/include/bc-devx.less
+++ b/public/less/include/bc-devx.less
@@ -1784,7 +1784,6 @@ form-title {
   background: transparent;
   border: none;
   box-shadow: none;
-  margin: .5em 0;
   > img.card-img-left {
     height: 50px;
     width: 50px;
@@ -1793,7 +1792,6 @@ form-title {
     border-radius: 25px;
   }
   > .card-body {
-    padding: .25em 0 0;
     > .btn-remove {
       margin-top: 2px;
     }
